--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,6 +3,8 @@ name: Android CI
 on:
   push:
     branches: [ "main", "master" ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ "main", "master" ]
 
@@ -43,3 +45,44 @@ jobs:
         name: app-release-unsigned
         path: app/build/outputs/apk/release/app-release-unsigned.apk
         retention-days: 30
+
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
+
+    - name: Create Release and Upload APK
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          app/build/outputs/apk/debug/app-debug.apk
+          app/build/outputs/apk/release/app-release-unsigned.apk
+        body: |
+          ## TrailDiary 自动构建
+          
+          构建时间: ${{ steps.date.outputs.date }}
+          
+          ### 下载说明
+          - **app-debug.apk** - Debug版本，可直接安装测试
+          - **app-release-unsigned.apk** - Release版本（未签名）
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload to Latest Release
+      if: github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: latest
+        name: Latest Build
+        prerelease: true
+        files: |
+          app/build/outputs/apk/debug/app-debug.apk
+        body: |
+          ## 最新构建 (自动更新)
+          
+          构建时间: ${{ steps.date.outputs.date }}
+          Commit: ${{ github.sha }}
+          
+          **注意**: 这是最新的开发版本，每次代码更新都会自动覆盖
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
